[recompiled] renamed `lib-lamu` to `lib-lamucommons`

--- a/workspace/kawapad/.classpath
+++ b/workspace/kawapad/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry kind="src" path="src.action"/>
 	<classpathentry kind="src" path="src.gui-utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-evaluators"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
