--- a/workspace/lamu/.classpath
+++ b/workspace/lamu/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pulsar"/>
