--- a/workspace/lib-deprecated/.classpath
+++ b/workspace/lib-deprecated/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="src.thread-current"/>
 	<classpathentry kind="src" path="src.thread-initializers"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
