--- a/workspace/lib-lamucommons/.project
+++ b/workspace/lib-lamucommons/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lib-lamu</name>
+	<name>lib-lamucommons</name>
 	<comment></comment>
 	<projects>
 	</projects>
