--- a/workspace/lib-loggerutils/build.xml
+++ b/workspace/lib-loggerutils/build.xml
@@ -11,7 +11,7 @@
     <property name="lib-deprecated.location" value="../lib-deprecated"/>
     <property name="lib-evaluators.location" value="../lib-evaluators"/>
     <property name="lib-kawautils.location" value="../lib-kawautils"/>
-    <property name="lib-lamu.location" value="../lib-lamu"/>
+    <property name="lib-lamucommons.location" value="../lib-lamucommons"/>
     <property name="metro.location" value="../metro"/>
     <property name="pulsar.location" value="../pulsar"/>
     <property name="pulsar-gui.location" value="../pulsar-gui"/>
@@ -56,8 +56,8 @@
         <ant antfile="build.xml" dir="${lib-evaluators.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="build"/>
-        <ant antfile="build.xml" dir="${lib-lamu.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${lib-lamu.location}" inheritAll="false" target="build"/>
+        <ant antfile="build.xml" dir="${lib-lamucommons.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-lamucommons.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
