--- a/workspace/metro/.classpath
+++ b/workspace/metro/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
