--- a/workspace/pulsar/.classpath
+++ b/workspace/pulsar/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="src.scheme"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
