split `lib-procs` out to a new project

--- a/workspace/lamu/.classpath
+++ b/workspace/lamu/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pulsar-gui"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-evaluators"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-args"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-procs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
