--- a/workspace/lib-args/build.xml
+++ b/workspace/lib-args/build.xml
@@ -9,6 +9,7 @@
     <property name="lib-loggerutils.location" value="../lib-loggerutils"/>
     <property name="lib-lamucommons.location" value="../lib-lamucommons"/>
     <property name="lib-kawautils.location" value="../lib-kawautils"/>
+    <property name="lib-procs.location" value="../lib-procs"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -25,22 +26,23 @@
         <path refid="lib-lamucommons.classpath"/>
         <path refid="lib-loggerutils.classpath"/>
     </path>
+    <path id="lib-procs.classpath">
+        <pathelement location="${lib-procs.location}/bin"/>
+        <path refid="lib-lamucommons.classpath"/>
+        <path refid="lib-loggerutils.classpath"/>
+        <path refid="lib-kawautils.classpath"/>
+    </path>
     <path id="lib-args.classpath">
         <path refid="lib-lamucommons.classpath"/>
         <path refid="lib-loggerutils.classpath"/>
         <pathelement location="bin"/>
         <path refid="lib-kawautils.classpath"/>
+        <path refid="lib-procs.classpath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.args">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-        <copy includeemptydirs="false" todir="bin">
-            <fileset dir="src.procs">
                 <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
@@ -53,18 +55,19 @@
         <ant antfile="build.xml" dir="${lib-loggerutils.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${lib-lamucommons.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-procs.location}" inheritAll="false" target="clean"/>
     </target>
     <target depends="build-subprojects,build-project" name="build"/>
     <target name="build-subprojects">
         <ant antfile="build.xml" dir="${lib-loggerutils.location}" inheritAll="false" target="build-project"/>
         <ant antfile="build.xml" dir="${lib-lamucommons.location}" inheritAll="false" target="build-project"/>
         <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${lib-procs.location}" inheritAll="false" target="build-project"/>
     </target>
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
             <src path="src.args"/>
-            <src path="src.procs"/>
             <classpath refid="lib-args.classpath"/>
         </javac>
     </target>
