--- a/workspace/lib-args/.classpath
+++ b/workspace/lib-args/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry kind="src" path="src.args"/>
-	<classpathentry kind="src" path="src.procs"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-procs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
