--- a/workspace/lib-lamucommons/build.xml
+++ b/workspace/lib-lamucommons/build.xml
@@ -11,6 +11,7 @@
     <property name="lib-deprecated.location" value="../lib-deprecated"/>
     <property name="lib-evaluators.location" value="../lib-evaluators"/>
     <property name="lib-kawautils.location" value="../lib-kawautils"/>
+    <property name="lib-procs.location" value="../lib-procs"/>
     <property name="metro.location" value="../metro"/>
     <property name="pulsar.location" value="../pulsar"/>
     <property name="pulsar-gui.location" value="../pulsar-gui"/>
@@ -78,6 +79,8 @@
         <ant antfile="build.xml" dir="${lib-evaluators.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="build"/>
+        <ant antfile="build.xml" dir="${lib-procs.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-procs.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
