reorganized and modified some spec
- In the main application's command-line argument, now the default
  command is `exec`, not `open`.

- Suppressed displaying SimpleConsole on exceptions when the current
  command is invoked by kawapad-gui/pulsar-gui.

- Reorganized the packages.

- Added BarsPerSecond() in order to give tempo-independent time setting
  abilities.

- Use SimpleLogFormatter as default.

- Adopted to the new source-folder name convention.

- Changed the stdio-stream into stdio, etc.

- Fixed a bug that `lamu` throws an error when no argument is given.

- Creating a variable which name is `pu`, when PulsarLib is
  instantiated.

--- a/workspace/kawapad/build.xml
+++ b/workspace/kawapad/build.xml
@@ -43,17 +43,20 @@
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
-            <fileset dir="src">
+            <fileset dir="src.kawapad">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="bin">
-            <fileset dir="src.action">
+            <fileset dir="src.actions">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.gui-utils">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -77,8 +80,8 @@
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
-            <src path="src"/>
-            <src path="src.action"/>
+            <src path="src.kawapad"/>
+            <src path="src.actions"/>
             <src path="src.gui-utils"/>
             <classpath refid="kawapad.classpath"/>
         </javac>
