--- a/workspace/metro/build.xml
+++ b/workspace/metro/build.xml
@@ -31,6 +31,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.metro">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -59,10 +60,5 @@
         <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build"/>
-    </target>
-    <target name="MetroSequenceDirectFilter">
-        <java classname="metro.MetroSequenceDirectFilter" failonerror="true" fork="yes">
-            <classpath refid="metro.classpath"/>
-        </java>
     </target>
 </project>
