--- a/workspace/kawapad/.classpath
+++ b/workspace/kawapad/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="src.action"/>
+	<classpathentry kind="src" path="src.kawapad"/>
+	<classpathentry kind="src" path="src.actions"/>
 	<classpathentry kind="src" path="src.gui-utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
