--- a/workspace/lib-loggerutils/build.xml
+++ b/workspace/lib-loggerutils/build.xml
@@ -26,6 +26,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.lamu-logger">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
