--- a/workspace/lib-procs/build.xml
+++ b/workspace/lib-procs/build.xml
@@ -36,6 +36,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.procs">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
