--- a/workspace/pulsar-gui/build.xml
+++ b/workspace/pulsar-gui/build.xml
@@ -52,6 +52,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.pulsar-gui">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
