--- a/workspace/lib-kawautils/.classpath
+++ b/workspace/lib-kawautils/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/kawa.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/kawa.jar" sourcepath="lib/kawa-3.0-src.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src.kawautils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
