--- a/workspace/metro/.classpath
+++ b/workspace/metro/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src.metro"/>
-	<classpathentry exported="true" kind="lib" path="lib/jna-4.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jna-4.5.0.jar" sourcepath="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="lib/jnajack-1.3.0.zip"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
