--- a/workspace/metro/build.xml
+++ b/workspace/metro/build.xml
@@ -24,6 +24,9 @@
         <pathelement location="lib/jna-4.5.0.jar"/>
         <pathelement location="lib/jna-platform-4.5.0.jar"/>
         <pathelement location="lib/jnajack-1.3.0.jar"/>
+        <pathelement location="lib/apfloat-aparapi.jar"/>
+        <pathelement location="lib/apfloat-jscience.jar"/>
+        <pathelement location="lib/apfloat.jar"/>
         <path refid="lib-loggerutils.classpath"/>
         <path refid="lib-lamucommons.classpath"/>
     </path>
@@ -31,7 +34,6 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.metro">
-                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -60,5 +62,10 @@
         <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build"/>
+    </target>
+    <target name="MetroDirectFilterSequence">
+        <java classname="metro.MetroDirectFilterSequence" failonerror="true" fork="yes">
+            <classpath refid="metro.classpath"/>
+        </java>
     </target>
 </project>
