--- a/workspace/metro/.classpath
+++ b/workspace/metro/.classpath
@@ -5,6 +5,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/jna-4.5.0.jar" sourcepath="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="lib/jnajack-1.3.0.zip"/>
+	<classpathentry kind="lib" path="lib/apfloat-aparapi.jar" sourcepath="lib/apfloat-1.9.1.zip"/>
+	<classpathentry kind="lib" path="lib/apfloat-jscience.jar" sourcepath="lib/apfloat-1.9.1.zip"/>
+	<classpathentry kind="lib" path="lib/apfloat.jar" sourcepath="lib/apfloat-1.9.1.zip"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamucommons"/>
 	<classpathentry kind="output" path="bin"/>
