--- a/workspace/lib-lamucommons/.classpath
+++ b/workspace/lib-lamucommons/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="src.commons"/>
 	<classpathentry kind="src" path="src.apps"/>
 	<classpathentry kind="src" path="src.streams"/>
+	<classpathentry kind="src" path="src.threadlocals"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
