--- a/workspace/kawapad/build.xml
+++ b/workspace/kawapad/build.xml
@@ -44,16 +44,25 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.kawapad">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.actions">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src.gui-utils">
+                <exclude name="**/*.launch"/>
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src.kawapad-logger">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -80,6 +89,7 @@
             <src path="src.kawapad"/>
             <src path="src.actions"/>
             <src path="src.gui-utils"/>
+            <src path="src.kawapad-logger"/>
             <classpath refid="kawapad.classpath"/>
         </javac>
     </target>
